--- a/css/style.less
+++ b/css/style.less
@@ -3,7 +3,10 @@
     width: 100%;
   }
   &-text {
+   font-family: "Times New Roman", sans-serif;
     position: absolute;
+    margin-left:10%;
+    margin-right: 10%;
     top: 10%;
     text-align: center;
   }
@@ -12,7 +15,7 @@
     color: #606060;
     text-transform: uppercase;
   }
-  h4 {
+  h3 {
     font-size: 20px;
     color: #888888;
     width: 73%;
@@ -30,8 +33,8 @@
 
   .text {
     position: absolute;
-    top: 30%;
-    margin-left: 2%;
+    top: 40%;
+    margin-left: 5%;
     text-align: center;
     color: #fff;
     font-size: 30px;
@@ -41,8 +44,8 @@
   .text-2 {
     color: #fff;
     position: absolute;
-    top: 30%;
-    left: 249px;
+    top: 40%;
+    left: 275px;
     right: 0;
     text-transform: uppercase;
     font-size: 30px;
@@ -51,8 +54,8 @@
    .text-3 {
     color: #fff;
     position: absolute;
-    top: 30%;
-    left: 490px;
+    top: 40%;
+    left: 535px;
     right: 0;
     text-transform: uppercase;
     font-size: 30px;
@@ -61,13 +64,10 @@
   .text-4 {
     color: #fff;
     position: absolute;
-    top: 30%;
-    left: 725px;
+    top: 40%;
+    left: 780px;
     right: 0;
     text-transform: uppercase;
     font-size: 30px;
   }
-
-
-
 }
